# old-stuff

calc/: drawlib.h  main.cpp  reserve.cpp  reserve1.cpp  settings.gray.h  settings.my.h
cdlpaint/: cdlpaint  compile.sh
forth/: .ttt.fs.un~  CMakeLists.txt  compile_commands.json  grotcalc.fs  gul.fs  stdlib.fs  tinyprog.fs  ttt.fs  ttt.fs~
forth/.cache/clangd/index/: forth.c.ABB2F6025E748F1E.idx  hashtable.c.0A1179FF572A20F9.idx  hashtable.h.475E86765B843DF5.idx  interpreter.c.1E8DBC12000A9D61.idx  interpreter.h.BC2B12293A4653DE.idx  lexer.c.1E8A3593D47AAEF3.idx  lexer.h.43DEE9B3C5020A70.idx  stack.c.D62BEB67937D78FE.idx  stack.h.5AFE42AB39332B18.idx  stdproc.c.8315E3EAB50C2FC6.idx  stdproc.h.635886498E87ECA2.idx  word.c.2324244C8B0BDFFB.idx  word.h.594E3F9004500BCA.idx
forth/include/: hashtable.h  interpreter.h  lexer.h  stack.h  stdproc.h  word.h
forth/src/: forth.c  hashtable.c  interpreter.c  lexer.c  stack.c  stdproc.c  word.c
freasp/: CMakeLists.txt  README.md  main.c
freasp/examples/: algs.scm  draw.scm  input.scm  ladder.scm  line.scm  math.scm  prog1.scm
freasp/include/: freasp.h  internal.h  lexer.h
freasp/src/: freasp_deffuncfuncs.c  freasp_file.c  freasp_functions.c  freasp_interp.c  freasp_labelfuncs.c  freasp_progdfuncs.c  freasp_varfuncs.c  internal.c  lexer.c  lexer_stmachine.c  lexer_string.c  lexer_tokenlist.c
pacfront/: main.c  pacfront
tetris/: celtlib.c  celtlib.h  compile.sh  drwlib.c  drwlib.h  tetrisengine.c  tetrisengine.h  winlib.c  winlib.h  wintest.c
tuicalc/: README.md  drawlib.h  (+3 more)
tuicalc-v0.1/: main.cpp  settings.h
(+4 files in other folders)
